new file:   1.SyetemProcessStatistics/main.cpp 	new file:   10.CSP/nodeimportance.cpp 	new file:   11.CSP/magicticket.cpp 	new file:   12.CSP/clickwindow.cpp 	new file:   13.CSP/eliminationgame.cpp 	new file:   13.CSP/eliminationgame.exe 	new file:   17.ArithmeticExression/main.cpp 	new file:   18.LinkGame/data.txt 	new file:   18.LinkGame/main.cpp 	new file:   2.maze_game/Maze.h 	new file:   2.maze_game/mazemap.txt 	new file:   2.maze_game/solution.cpp 	new file:   22.minimum_spanning_tree/kruscal.cpp 	new file:   22.minimum_spanning_tree/prim.cpp 	new file:   3.FamilyTreeManagement/FamilyTree.h 	new file:   3.FamilyTreeManagement/Member.h 	new file:   3.FamilyTreeManagement/family(1).txt 	new file:   3.FamilyTreeManagement/family.txt 	new file:   3.FamilyTreeManagement/familytree/showtree.dot 	new file:   3.FamilyTreeManagement/main.cpp 	new file:   4.HuffmanCode/Huffman.txt 	new file:   4.HuffmanCode/HuffmanCode.h 	new file:   4.HuffmanCode/code.dat 	new file:   4.HuffmanCode/main.cpp 	new file:   4.HuffmanCode/recode.txt 	new file:   4.HuffmanCode/source.txt 	new file:   5.SubwayConstruction/main.cpp 	new file:   "6.NJbusRoute/3_\345\215\227\344\272\254\345\270\202\345\205\254\344\272\244\347\272\277\350\267\257_17270\346\235\241.txt" 	new file:   6.NJbusRoute/busroute.cpp 	new file:   7.B-Tree/B-Tree.h 	new file:   7.B-Tree/b-tree1.txt 	new file:   7.B-Tree/b-tree2.txt 	new file:   7.B-Tree/b-tree3.txt 	new file:   7.B-Tree/data.txt 	new file:   7.B-Tree/main.cpp 	new file:   8.CompareSort/Sort.h 	new file:   8.CompareSort/data.txt 	new file:   8.CompareSort/main.cpp 	new file:   9.CSP/numbersort.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,25 @@
         "ratio": "cpp",
         "mutex": "cpp",
         "thread": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cuchar": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "map": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "future": "cpp",
+        "scoped_allocator": "cpp",
+        "shared_mutex": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp"
     }
 }
