--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
                 "${file}",//${fileDirname}${file}
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "-fexec-charset=GBK"
+                "-finput-charset=GBK",
+                "-fexec-charset=GBK",
             ],
             "options": {
                 "cwd": "${fileDirname}"
